--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "iriscrm/core-build",
+    "name": "iriscrm/core",
     "description": "Iris CRM core (build)",
     "bin": [
         "iris"
