--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "phpmailer/phpmailer": "^5.2",
         "longman/telegram-bot": "^0.52.0",
         "symfony/http-foundation": "^3.2",
-        "twbs/bootstrap": "^3.3"
+        "twbs/bootstrap": "^3.3",
+        "twig/twig": "^2.4",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "codeception/codeception": "^2.2"
